@@ -243,6 +243,8 @@ add_sensor_settings_box ( GtkWidget * vbox, t_sensors_dialog * sd)
         gtk_scrolled_window_set_policy (
             GTK_SCROLLED_WINDOW (myScrolledWindow), GTK_POLICY_AUTOMATIC,
             GTK_POLICY_AUTOMATIC);
+        gtk_scrolled_window_set_shadow_type (GTK_SCROLLED_WINDOW (myScrolledWindow),
+                                           GTK_SHADOW_ETCHED_IN);
         gtk_container_set_border_width (GTK_CONTAINER (myScrolledWindow), 0);
         /* gtk_scrolled_window_add_with_viewport (
             GTK_SCROLLED_WINDOW (myScrolledWindow), sd->myTreeView); */
